Fix responsive spacing on charts

--- a/_sass/_responsive-max768.scss
+++ b/_sass/_responsive-max768.scss
@@ -71,4 +71,8 @@
 	{
 		height: 28px;
 	}
+
+	.chart-spacer {
+		margin-top: 25px !important;
+	}
 }
